# distill-wiki-pipeline

./: .gitignore  .gitmodules  AGENTS.md  README.md  opencode.jsonc  purpose.md
pipeline/: README.md  config.yaml  pyproject.toml
pipeline/pipeline/api/: jobs.py  main.py
pipeline/pipeline/api/routes/: auto.py  graph.py  jobs.py  lint.py  log.py  raw.py  status.py  sync.py  upload.py  wiki.py
pipeline/pipeline/cli/: main.py  watch.py
pipeline/pipeline/llm/: __init__.py  router.py
pipeline/pipeline/llm/prompts/: export.py  ingest.py
pipeline/pipeline/llm/workflows/: export.py  ingest.py
pipeline/pipeline/mcp/: __main__.py  server.py
pipeline/pipeline/wiki_core/: fs.py  graph.py  lint.py  models.py  paths.py  status.py  sync.py
pipeline/pipeline/workflows/: auto.py
pipeline/tests/: test_api.py  test_auto_pipeline.py  test_cli.py  test_export_workflow.py  test_fs.py  test_graph_upload.py  test_ingest_workflow.py  test_lint.py  test_mcp_tools.py  test_status.py
pipeline/tests/fixtures/: minimal-wiki-config.yaml
pipeline/ui/: README.md  package-lock.json  package.json
pipeline/ui/src/: App.module.css  App.tsx  api.ts  index.css
pipeline/ui/src/components/: DiffView.module.css  DiffView.tsx
pipeline/ui/src/pages/: AutoPipeline.module.css  AutoPipeline.tsx  Dashboard.module.css  Dashboard.tsx  ExportWizard.module.css  ExportWizard.tsx  GraphView.module.css  GraphView.tsx  IngestWizard.module.css  IngestWizard.tsx  LintDashboard.module.css  LintDashboard.tsx  LogViewer.module.css  LogViewer.tsx  RawQueue.module.css  RawQueue.tsx  SyncView.module.css  (+1 more)
(+17 files in other folders)
